@@ -77,7 +77,7 @@ static int map_if_lk24(int sg_fd, const char * device_name, int rw,
 
 #define MAX_DEV_NAMES 256
 
-static const char * version_str = "1.09 20130617 [svn: r216]";
+static const char * version_str = "1.09 20130715 [svn: r217]";
 
 
 static struct option long_options[] = {
