@@ -245,8 +245,16 @@ decode_designation_descriptor(const unsigned char * ucp, int i_len,
         break;
     case 1: /* T10 vendor identification */
         printf("      vendor id: %.8s\n", ip);
-        if (i_len > 8)
-            printf("      vendor specific: %.*s\n", i_len - 8, ip + 8);
+        if (i_len > 8) {
+            if ((2 == c_set) || (3 == c_set)) { /* ASCII or UTF-8 */
+                printf("      vendor specific: %.*s\n", i_len - 8, ip + 8);
+            } else {
+                printf("      vendor specific: 0x");
+                for (m = 8; m < i_len; ++m)
+                    printf("%02x", (unsigned int)ip[m]);
+                printf("\n");
+            }
+        }
         break;
     case 2: /* EUI-64 based */
         if (! long_out) {
